issues resolved tab alignment,placeholder of request,my buddies image alignment

--- a/css/common.css
+++ b/css/common.css
@@ -477,7 +477,7 @@
     margin-top: -78px;
 }
 .buddyTab1{
-    font-size: 37px;
+    font-size: 35px;
     border-radius: 5px !important;
     width: 90px;
     text-decoration: none;
@@ -675,6 +675,22 @@
     box-shadow: 3px 4px 6px rgba(0,0,0,0.3)
 
 }
+#rateTab5 .oj-tabs-tab-content,
+#rateTab2 .oj-tabs-tab-content,
+#home1 .oj-tabs-tab-content,
+#home2 .oj-tabs-tab-content{
+     border-style: none; 
+     border-width: 0px; 
+     border-radius: 0; 
+}
+#rateTab5.oj-tabs-tab,
+#rateTab2.oj-tabs-tab,
+#home1.oj-tabs-tab,
+#home2.oj-tabs-tab
+{
+     border-color: transparent;
+    border-style: none;   
+}
 .modal-submit1{
     background-color: #e3ffca !important;
     color: #000 !important;
@@ -754,9 +770,9 @@
 .countBlock{
     margin-bottom: 20px;
 }
-#tabs-container .oj-tabs-nav{
+/*#tabs-container .oj-tabs-nav{
     margin-left: 12px;
-}
+}*/
 
 #tabs-container .oj-tabs-tab.oj-selected {
     border-color: #689F39;
@@ -1101,7 +1117,7 @@
     color:green;
 }
 .buddyTab4{
-    font-size: 40px;
+    font-size: 38px;
     border-radius: 5px !important;
     width: 90px;
     text-decoration: none;
@@ -1110,7 +1126,7 @@
     color:green;
 }
 .buddyTab5{
-    font-size: 40px;
+    font-size: 38px;
     border-radius: 5px 5px 0 0 !important;
     width: 90px;
     text-decoration: none;
@@ -1500,12 +1516,23 @@
     font-family: nameHeading;
     text-align: center;
 }
-.home-hr{
-    margin-top: 15px;
-    margin-left: 13px;
-    border: solid #d6dfe6;
-    border-width: 1px 0 0;
+#text-area::-webkit-input-placeholder
+{
+  color: #333;
 }
+
+#text-area::-moz-placeholder
+{
+  color: #333;
+}
+#text-area:-moz-placeholder {
+    color: #333;
+}
+
+#text-area:-ms-input-placeholder {
+    color: #333;
+}
+
 .View-Other-about{
     padding: 17px;
     font-size: 23px;
