--- a/css/custom.css
+++ b/css/custom.css
@@ -191,9 +191,7 @@ body{
 .profile{
     border-radius: 50%;
     height: 120px;
-    margin-top: 10px;
     width: 120px;
-    margin-bottom: -10px;/*Namrata*/
 }
 .profile2{
     height: 90px;
@@ -237,7 +235,7 @@ body{
     margin-bottom:10px;
 }
 .border-right-recent:nth-child(4) {
-  border-right: medium none !important;
+    border-right: medium none !important;
 }
 .showup *{
     color:#fff;
@@ -1205,29 +1203,29 @@ div.oj-tabs-panel.oj-tabs-selected{
 }
 @media  (min-width: 769px) and (max-width: 1366px){
     #oj-combobox-choice-combobox3.oj-combobox-choice, #oj-combobox-choice-combobox2.oj-combobox-choice, #oj-combobox-choice-combobox9.oj-combobox-choice{
-    width: 378px !important;
-    /*margin-left: 8px !important;*/
-    min-width: 278px !important;
-    max-width: 100% !important;
-}
+        width: 378px !important;
+        /*margin-left: 8px !important;*/
+        min-width: 278px !important;
+        max-width: 100% !important;
+    }
     .textArea3 {
-    height: 143px;
-    border: none;
-    margin-left: 2px;
-    max-width: 100%;
-    width: 400px;
-    min-width: 377px;
+        height: 143px;
+        border: none;
+        margin-left: 2px;
+        max-width: 100%;
+        width: 400px;
+        min-width: 377px;
     }
     .areaFloat {
-    width: 100%;
-    height: 148px;
-    border-style: solid;
-    border-color: #305a04;
-    border-width: 1px;
-    margin-top: -8px;
-    background-color: #fff;
-    border-radius: 5px;
-    margin-left: 0px;
+        width: 100%;
+        height: 148px;
+        border-style: solid;
+        border-color: #305a04;
+        border-width: 1px;
+        margin-top: -8px;
+        background-color: #fff;
+        border-radius: 5px;
+        margin-left: 0px;
     }
 }
 @media  screen and (min-width: 320px) and (max-width: 767px) {
